# NIVR2

./: .gitignore  README.md  __init__.py  pyproject.toml
model/: attention.py  base_model.py  common.py  condition.py  config.py  dit.py  rope.py  sampling.py  vae.py  window.py
nodes/: color_correction.py  dit_patch.py  text_embedding.py  vae_patch.py
postprocess/: alpha.py  color_fix.py
templates/: Native SVR2.json
